--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +19,7 @@
     <script src="/js/btn__view__all.js" defer></script>
     <script src="/js/burger.js" defer></script>
     <script src="/js/modal__window.js" defer></script>
-    <script src="/js/preloader.js" defer></script>
     <script src="/js/scroll.js" defer></script>
-    <script src="/js/cursor.js" defer></script>
     <script src="/js/slider.js" defer></script>
     <script src="/js/lang.js" defer></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
